# website

./: Cargo.toml  README.md  index.html  package-lock.json
.github/workflows/: gh-pages-deploy.yml
public/: styles.scss
src/: lib.rs  main.rs
src/pages/: game.rs  home.rs  mod.rs
